# hackathons-guide-rag

./: .env.example  .gitignore  README.md  build_chunks.py  clean_rendered_document.py  diagnose_semantic_merges.py  embed_and_merge_modal.py  evaluate_retrieval.py  planning.md  pyproject.toml  requirements.txt  retrieval.py  scrape_url.py  store_in_chroma.py
documents/: about-gitlab-com-gitlab-ai-hackathon-2026-meet-the-winners.md  allhackathons_university_details.md  blog-mlh-com-top-10-prize-winning-hackathon-projects-for-the-avanade-best-sustai.md  deepstation-ai-ai-hackathons-how-to-prepare-compete-and-win-in-2026.md  docs-google-com-edit.md  entrepreneurquarterly-com-5-roles-every-hackathon-team-needs-eq.md  eventornado-com-how-to-form-a-winning-team-for-hackathons-5-quick-tips.md  get-tech-180-student-hackathons-famous-hackathons-to-participate-in.md  github-com-github-amahjoor-hackathons-compiled-list-of-recurring-hackathons-gith.md  github-com-github-olanetsoft-awesome-hackathon-projects-this-is-a-curated-list-o.md  hackathon-guide-hackathon-guide.md  help-devpost-com-best-practices-social-good-hackathons-devpost-com-help-center.md  help-devpost-com-community-and-forming-teams-during-online-hackathons-devpost-co.md  info-devpost-com-8-types-of-internal-hackathons-to-drive-innovation-within-your.md  lablab-ai-recent-ai-hackathons-winners-lablab-ai.md  medium-com-beginner-guide-mastering-hackathons-for-wins-learning-and-referrals-b.md  medium-com-hack-the-travel-recently-i-have-had-quite-a-few-people-by-dan-stepano.md  mlh_2026_event_details_with_faq.md  (+30 more)
(+12 files in other folders)
